# sudoku

./: .gitignore  .travis.yml  Cargo.toml  index.html  sudoku-bin.wasm
.github/workflows/: deploy.yml
boards/: basic.sudoku
src/: board.rs  lib.rs  main.rs
