[package]
name = "sudoku"
version = "0.1.0"
authors = ["bretzle <johnfish218@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sudoku"
path = "src/lib.rs"

[[bin]]
name = "sudoku-bin"
path = "src/main.rs"

[dependencies]
macroquad = "0.3.0-alpha.15"
serde = "1"
serde_json = "1"
serde_derive = "1"